# s63lib

./: .gitignore  CMakeLists.txt
src/: s63.cpp  simple_zip.cpp
tests/: extractor.cpp
